2004-07-19  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c: 
	use new found _gnome_vfs_configuration_get_methods_list
	function for getting supported uri schemes.

2004-07-19  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	ping mime monitor after successfully reading 
	in cache, so it doesn't get pinged superfluously
	for directories that lack cache files.

	* test/test-mime-info-cache.c: update test file to
	use mime monitor.	

2004-07-19  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c: 
	(prune_ids_for_nonexistent_applications),
	(application_known_to_be_nonexistent),
	(gnome_vfs_mime_get_all_applications):
	Get rid of unneeded pruning functions

	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	ping mime monitor when caches are reread from disk.

2004-07-19  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c: 
	(gnome_vfs_mime_get_default_desktop_entry):
	strdup the result before returning it.

2004-07-19  Ray Strode  <rstrode@redhat.com>

	* test/test-mime-info-cache.c: 
	Make program multi-threaded.

2004-07-19  Dave Camp  <dave@novell.com>

	* libgnomevfs/gnome-vfs-mime-info.c: (handle_mime_info),
	(mime_entry_free), (gnome_vfs_mime_get_value): Add a
	"parent_classes" key read from the is-subclass-of fields.

2004-07-19  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	Remove some nested G_LOCK nastiness.

2004-07-19  Ray Strode  <rstrode@redhat.com>

	Detect changes to cache files.  Note it's
	still somehow broken cause nautilus locks
	up when the test files change.

	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	(gnome_vfs_mime_info_cache_dir_out_of_date):
	(gnome_vfs_mime_info_cache_defaults_list_out_of_date):
	new functions to detect whether cache should
	be reloaded.
	(gnome_vfs_mime_info_cache_dir_load):
	(gnome_vfs_mime_info_cache_dir_load_defaults_list):
	use aforementioned new functions.